# Personal_Projects

./: .gitignore  CMakeLists.txt  Makefile  README.md  basics.cpp  basics.hpp  cInterval.cpp  correlation.cpp  correlation.hpp  data.txt  formulas.txt  hypTest.cpp  main.cpp  statistical_calculator
c++/statistical_calculator/: .clang-format  .clang-format.txt  CMakeLists.txt  Makefile  README.md  advanced.cpp  advanced.h  advanced.hpp  basics.cpp  basics.h  basics.hpp  cInterval.cpp  cInterval.hpp  ccoefficent.cpp  confidence.cpp  confidence.h  correlation.cpp  correlation.h  correlation.hpp  formulas.txt  funcs.cpp  funcs.h  ht.cpp  ht.h  hypTest.cpp  hypTest.hpp  main.cpp  writeup.txt
src/: Makefile  basics.cpp  basics.hpp  cInterval.cpp  cInterval.hpp  correlation.cpp  correlation.hpp  hypTest.cpp  hypTest.hpp  main.cpp
tests/: tests.cpp
